Jump Start Changelog
====================

2.2.1 - XX/XX/2018
------------------

* **Updated Theme Blvd framework to 2.7.1**
* Fixed: Publish dates in "time ago" format showing, "0 seconds ago".

--------------------------------------------------------------

2.2.0 - 01/16/2018
------------------

**Important General Notes:**

* If icons you've implemented are not showing up, [take a look here](https://fontawesome.com/how-to-use/upgrading-from-4#icon-name-changes-complete-list) to make sure you're not using FontAwesome icon names that they changed in v5.
* The following sections at *Appearance > Theme Options* have been added or modified. Make sure to double check these options are set up the way you want after updating.
	* (new) *Styles > Sticky Header* -- All theme bases, except Developer.
	* (modified) *Styles > Mobile Header* -- All theme bases, except Developer.
	* (modified) *Styles > Footer* -- All theme bases, except Developer.
	* (new) *Layout > Sticky Header* -- All theme bases.
	* (new) *Layout > Contact* -- All theme bases, except Agent.
	* (modified) *Content > General* -- All theme bases.
	* (modified) *Content > Archives* -- All theme bases.
	* (modified) *Plugins > bbPress* -- All theme bases, if using bbPress plugin.
	* (modified) *Plugins > Gravity Forms* -- All theme bases, if using Gravity Forms plugin.
	* (modified) *Plugins > WooCommerce* -- All theme bases, if using WooCommerce plugin.
* With this theme update, you must also update the following plugins, if you're using any of them.
	* Theme Blvd Layout Builder to 2.2+.
	* Theme Blvd Widget Areas to 1.3+.
	* Theme Blvd Shortcodes to 1.6.4+.
	* Theme Blvd Importer to 1.0.4+.
	* Tweeple to 0.9.5+.

**Important Developer Notes:**

* If you have [template part files](http://dev.themeblvd.com/tutorial/template-parts-framework-2-5/) in your child theme, they MUST be moved into a directory named `template-parts`.