@@ -5,7 +5,8 @@ Jump Start Changelog
 ------------------
 
 * **Updated Theme Blvd framework to 2.7.1**
-* Fixed: Publish dates in "time ago" format showing, "0 seconds ago".
+* Fixed: Publish dates in "time ago" format showing, "0 seconds ago."
+* Fixed: Text logo not centering when "Center Logo" is checked with Super User and Executive bases.
 
 --------------------------------------------------------------
 
